--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,79 @@
-certifi==2019.11.28
+appdirs==1.4.3
+astroid==2.2.5
+bcrypt==3.1.7
+beautifulsoup4==4.8.2
+biopython==1.73
+bottle==0.12.17
+bs4==0.0.1
+certifi==2019.6.16
+cffi==1.13.1
 chardet==3.0.4
-idna==2.9
-requests==2.23.0
-urllib3==1.25.8
+Click==7.0
+colorama==0.4.1
+cryptography==2.8
+cycler==0.10.0
+DateTime==4.3
+decorator==4.4.0
+distlib==0.3.0
+docopt==0.6.2
+filelock==3.0.12
+Flask==1.1.1
+Flask-Cors==3.0.8
+future==0.18.2
+gunicorn==19.9.0
+idna==2.8
+importlib-metadata==1.5.0
+isort==4.3.18
+itsdangerous==1.1.0
+Jinja2==2.10.3
+jsonify==0.5
+kiwisolver==1.1.0
+lazy-object-proxy==1.3.1
+lxml==4.4.1
+MarkupSafe==1.1.1
+matplotlib==3.1.0
+mccabe==0.6.1
+mqtt==0.0.1
+ncclient==0.6.3
+netmiko==3.0.0
+networkx==2.3
+numpy==1.16.4
+opencv-python==4.1.1.26
+paho-mqtt==1.4.0
+paramiko==2.6.0
+pipenv==2018.11.26
+pyang==2.2
+pycparser==2.19
+pycurl==7.43.0.5
+pydot==1.4.1
+pylint==2.3.1
+pymongo==3.9.0
+PyNaCl==1.3.0
+pyparsing==2.4.0
+pyserial==3.4
+python-dateutil==2.8.0
+pytz==2019.2
+PyYAML==5.1.2
+requests==2.22.0
+scp==0.13.2
+selectors2==2.0.1
+selenium==3.141.0
+simplejson==3.17.0
+six==1.12.0
+sockets==1.0.0
+soupsieve==2.0
+tabulate==0.8.3
+textfsm==1.1.0
+tqdm==4.44.1
+typed-ast==1.3.5
+urllib3==1.25.2
+uuid==1.30
+virlutils==0.8.8
+virtualenv==20.0.13
+virtualenv-clone==0.5.3
+Werkzeug==0.16.0
+wget==3.2
+wrapt==1.11.1
+xmltodict==0.12.0
+zipp==3.1.0
+zope.interface==4.6.0
