--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ idna==2.9
 requests==2.23.0
 urllib3==1.25.8
 Flask==1.1.1
+Flask-Assistant==0.4.1
 Flask-Cors==3.0.8
 gunicorn==19.9.0
 jsonify==0.5
